Thu Nov 19 15:21:04 1998  Geoffrey Noer  <noer@cygnus.com>

	* rdi-share/host.h: if compiling under Cygwin, make sure new
	preprocessor define is defined.  Define it if not.
	* rdi-share/aclocal.m4: regenerate
	* rdi-share/configure: regenerate

Thu Nov 19 14:43:44 1998  Geoffrey Noer  <noer@cygnus.com>

	* configure.in: switch back to checking __CYGWIN32__
	* configure: regenerate

Thu Nov 19 09:53:00 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* exec.c (exec_file_command): Cleanup. Replace #if
 	NEED_TEXT_START_END with if().
	* config/pa/nm-hppah.h (NEED_TEXT_START_END): Redefine to be 1.
	* config/convex/tm-convex.h (NEED_TEXT_START_END): Ditto.
	* config/gould/tm-np1.h (NEED_TEXT_START_END): Ditto.
	* config/a29k/tm-a29k.h (NEED_TEXT_START_END): Ditto.

Thu Nov 19 13:06:22 1998  Geoffrey Noer  <noer@cygnus.com>

	* main.c: Wait until more time has passed before calling
	new cygwin_ funcs, revert back to the cygwin32_ ones for now.
	* win32-nat.c: Ditto.

Wed Nov 18 15:03:17 1998  Andrew Cagney  <cagney@chook.cygnus.com>

	* 29k-share/udi/udip2soc.c (UDIConnect): Replace sys_errlist with
 	strerror.

Mon Nov 16 14:17:05 1998  Geoffrey Noer  <noer@cygnus.com>

	* defs.h: if compiling under Cygwin, define __CYGWIN__ if
	__CYGWIN32__ is defined and __CYGWIN__ isn't for backwards
	compatibility.

Fri Nov 13 00:15:08 1998  Geoffrey Noer  <noer@cygnus.com>

	Changes to account for name change from cygwin32 to cygwin and
	clean up Win32-related ifdefs.
	
	* configure.tgt: check for cygwin* instead of cygwin32.
	New cygwin gdb_target variable loses the "32".
	* configure.host: check for cygwin* instead of cygwin32.
	New cygwin gdb_host variable loses the "32".
	* configure.in: test __CYGWIN__ instead of __CYGWIN32__,
	rename gdb_cv_os_cygwin32 variable to drop the "32".  Call
	AM_EXEEXT instead of AC_EXEEXT since that isn't in a released
	autoconf yet.
	* configure: regenerate.

	* main.c: drop "32" from cygwin_ funcs, include sys/cygwin.h where