@@ -15,6 +15,14 @@
 #ifndef angsd_hostchan_h
 #define angsd_hostchan_h
 
+/* If under Cygwin, provide backwards compatibility with older
+   Cygwin compilers that don't define the current cpp define. */
+#ifdef __CYGWIN32__
+#ifndef __CYGWIN__
+#define __CYGWIN__
+#endif
+#endif
+
 /* struct timeval */
 #if defined(__unix) || defined(__CYGWIN__)
 #  include <sys/time.h>
