@@ -2,6 +2,7 @@ Thu Nov 19 15:21:04 1998  Geoffrey Noer  <noer@cygnus.com>
 
 	* rdi-share/host.h: if compiling under Cygwin, make sure new
 	preprocessor define is defined.  Define it if not.
+	* rdi-share/hostchan.h: ditto
 	* rdi-share/aclocal.m4: regenerate
 	* rdi-share/configure: regenerate
 
